workloads/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pe-frontend
spec:
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: pe-frontend
